--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,23 @@
                 font-family: dotum;
                 line-height: 1.6em;
             }
-            header {
+              body.black {
+                background-color: black;
+                color: white;
+            }
+            body.black a {
+                color: white;
+            }
+            body.black a:hover {
+                color: #f60;
+            }
+            body.black header {
+                border-bottom: 1px solid #333;
+            }
+            body.black nav {
+                border-right: 1px solid #333;
+            }
+            header { 
                 border-bottom: 1px solid #ccc;
                 padding: 20px 0;
             }
@@ -42,6 +58,7 @@
             h1 {
                 font-size: 1.4em;
             }
+            
         </style>
 
     </head>
@@ -52,9 +69,9 @@
                 <h1>JavaScript</h1>
             </header>
             <div id="toolbar">
-                <input type="button" value="black" />
-                <input type="button" value="white" />
-            </div>
+                <input type="button" value="black" onclick="document.getElementById('body').className = 'black'"/>
+                <input type="button" value="white" onclick="document.getElementBuId('body').className ='white'"/>
+             </div>
             <nav>
                 <ul>
                     <li><a href="http://opentutorials.org/course/49/17">JavaScript</a></li>
